k8s yaml/billservice.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: bill-service
  name: bill-service
  namespace: glenneligio
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bill-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bill-service
    spec:
      containers:
        - image: shuntjg/gba-bill-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: bill-service
          readinessProbe:
            httpGet:
              port: 8050
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8050
              path: /actuator/health/liveness
      restartPolicy: Always

---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bill-service
  name: bill-service
  namespace: glenneligio
spec:
  ports:
    - port: 8050
      protocol: TCP
      targetPort: 8050
  selector:
    app: bill-service
  sessionAffinity: None
  type: ClusterIP

---
# StatefulSet for Mysql Server
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bill-mariadb
  namespace: glenneligio
spec:
  serviceName: "bill-mariadb"
  selector:
    matchLabels:
      app: bill-mariadb
  template:
    metadata:
      labels:
        app: bill-mariadb
    spec:
      containers:
      - name: bill-mariadb
        image: mariadb:10.8.2-rc
        ports:
        - containerPort: 3306
        volumeMounts:
          - mountPath: /data/bill
            name: bill-data
  volumeClaimTemplates:
    - metadata:
        name: bill-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi


---
apiVersion: v1
kind: Service
metadata:
  name: bill-mariadb
  namespace: glenneligio
spec:
  clusterIP: None
  selector:
    app: bill-mariadb
  ports:
  - port: 3306
    targetPort: 3306
