k8s yaml/frontend.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata: 
  annotations: 
    deployment.kubernetes.io/revision: "1"
  labels: 
    app: frontend
  name: frontend
  namespace: glenneligio
spec: 
  replicas: 1
  revisionHistoryLimit: 10
  selector: 
    matchLabels: 
      app: frontend
  strategy: 
    rollingUpdate: 
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template: 
    metadata: 
      labels: 
        app: frontend
    spec: 
      containers: 
        - image: "shuntjg/gba-frontend:0.0.1.PROD"
          name: frontend
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "[ -f /var/run/nginx.pid ] && ps -A | grep nginx"
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
      restartPolicy: Always
      
---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: glenneligio
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
  sessionAffinity: None
  type: LoadBalancer
