k8s yaml/gateway.yml
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: glenneligio
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080

---
# Gateway deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
  namespace: glenneligio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: shuntjg/gba-api-gateway:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
