k8s yaml/okteto-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://gba-glenneligio.cloud.okteto.net"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
  name: gba
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
